==> PumaFPV/PumaTX/Other/esp32-snippets-master/esp32-snippets-master/hardware/displays/Adafruit_SSD1305-Library/Adafruit_SSD1305.cpp <==
#define pgm_read_byte(addr) (*(const unsigned char *)(addr))
#include <driver/gpio.h>
#include <driver/spi_master.h>
#include <esp_log.h>
#include <freertos/FreeRTOS.h>
#include <freertos/task.h>
#include <stdlib.h>
#include <string.h>
#include "Adafruit_GFX.h"
#include "../Adafruit_SSD1305-Library/Adafruit_SSD1305.h"
#include "glcdfont.c"
#include "sdkconfig.h"
#define ADAFRUIT_SSD1305_SPI SPI_CLOCK_DIV2
#define _BV(x) (1 << (x))

void Adafruit_SSD1305::begin() {

	ESP_LOGI(tag, "test abcd: sclk: %d, din: %d", sclk, mosi);
	spi_bus_config_t bus_config;
	bus_config.sclk_io_num   = sclk; // CLK
	bus_config.mosi_io_num   = mosi; // MOSI
	bus_config.miso_io_num   = -1; // MISO
	bus_config.quadwp_io_num = -1; // Not used
	bus_config.quadhd_io_num = -1; // Not used
	ESP_LOGI(tag, "... Initializing bus.");
	ESP_ERROR_CHECK(spi_bus_initialize(HSPI_HOST, &bus_config, 1));

	spi_device_interface_config_t dev_config;
	dev_config.address_bits     = 0;
	dev_config.command_bits     = 0;
	dev_config.dummy_bits       = 0;
	dev_config.mode             = 0;
	dev_config.duty_cycle_pos   = 0;
	dev_config.cs_ena_posttrans = 0;
	dev_config.cs_ena_pretrans  = 0;
	dev_config.clock_speed_hz   = 100000; // 100KHz
	dev_config.spics_io_num     = cs;
	dev_config.flags            = 0;
	dev_config.queue_size       = 1;
	dev_config.pre_cb           = NULL;
	dev_config.post_cb          = NULL;
	ESP_LOGI(tag, "... Adding device bus.");
	ESP_ERROR_CHECK(spi_bus_add_device(HSPI_HOST, &dev_config, &spi_handle));

  
  gpio_set_direction((gpio_num_t)dc, GPIO_MODE_OUTPUT);
  gpio_set_direction((gpio_num_t)rst, GPIO_MODE_OUTPUT);
    
  gpio_set_level((gpio_num_t)rst, 1);
  // VDD (3.3V) goes high at start, lets just chill for a ms
  vTaskDelay(1/portTICK_PERIOD_MS);
  // bring reset low
  gpio_set_level((gpio_num_t)rst, 0);
  // wait 10ms
  vTaskDelay(10/portTICK_PERIOD_MS);
  // bring out of reset
  gpio_set_level((gpio_num_t)rst, 1);


#if defined SSD1306_128_32
  // Init sequence for 128x32 OLED module
  command(SSD1305_DISPLAYOFF);                    // 0xAE
  command(SSD1305_SETLOWCOLUMN | 0x0);  // low col = 0
  command(SSD1305_SETHIGHCOLUMN | 0x0);  // hi col = 0
  command(SSD1305_SETSTARTLINE | 0x0); // line #0
  command(0x2E); //??
  command(SSD1305_SETCONTRAST);                   // 0x81
  command(0x32);
  command(SSD1305_SETBRIGHTNESS);                 // 0x82
  command(0x80);
  command(SSD1305_SEGREMAP | 0x01);
  command(SSD1305_NORMALDISPLAY);                 // 0xA6
  command(SSD1305_SETMULTIPLEX);                  // 0xA8
  command(0x3F); // 1/64
  command(SSD1305_MASTERCONFIG);
  command(0x8e); /* external vcc supply */
  command(SSD1305_COMSCANDEC);
  command(SSD1305_SETDISPLAYOFFSET);              // 0xD3
  command(0x40); 
  command(SSD1305_SETDISPLAYCLOCKDIV);            // 0xD5
  command(0xf0); 
  command(SSD1305_SETAREACOLOR);  
  command(0x05);
  command(SSD1305_SETPRECHARGE);                  // 0xd9
  command(0xF1);
  command(SSD1305_SETCOMPINS);                    // 0xDA
  command(0x12);

  command(SSD1305_SETLUT);
  command(0x3F);
  command(0x3F);
  command(0x3F);
  command(0x3F);

  #endif

  #if defined SSD1305_128_64
  // Init sequence for 128x64 OLED module
  command(SSD1305_DISPLAYOFF);                    // 0xAE
  command(SSD1305_SETLOWCOLUMN | 0x4);  // low col = 0
  command(SSD1305_SETHIGHCOLUMN | 0x4);  // hi col = 0
  command(SSD1305_SETSTARTLINE | 0x0); // line #0
  command(0x2E); //??
  command(SSD1305_SETCONTRAST);                   // 0x81
  command(0x32);
  command(SSD1305_SETBRIGHTNESS);                 // 0x82
  command(0x80);
  command(SSD1305_SEGREMAP | 0x01);
  command(SSD1305_NORMALDISPLAY);                 // 0xA6
  command(SSD1305_SETMULTIPLEX);                  // 0xA8
  command(0x3F); // 1/64
  command(SSD1305_MASTERCONFIG);
  command(0x8e); /* external vcc supply */
  command(SSD1305_COMSCANDEC);
  command(SSD1305_SETDISPLAYOFFSET);              // 0xD3
  command(0x40); 
  command(SSD1305_SETDISPLAYCLOCKDIV);            // 0xD5
  command(0xf0); 
  command(SSD1305_SETAREACOLOR);  
  command(0x05);
  command(SSD1305_SETPRECHARGE);                  // 0xd9
  command(0xF1);
  command(SSD1305_SETCOMPINS);                    // 0xDA
  command(0x12);

  command(SSD1305_SETLUT);
  command(0x3F);
  command(0x3F);
  command(0x3F);
  command(0x3F);
  #endif

  command(SSD1305_DISPLAYON);//--turn on oled panel
}

void Adafruit_SSD1305::command(uint8_t c) { 
	gpio_set_level((gpio_num_t)dc, 0);
  vTaskDelay(1/portTICK_PERIOD_MS);
   //delay(1);
  spixfer(c);
}

void Adafruit_SSD1305::display(void) {
  uint16_t i=0;
  uint8_t page;
  if (SSD1305_LCDHEIGHT == 64) page = 0;
  if (SSD1305_LCDHEIGHT == 32) page = 4;

  for(; page<8; page++) {
    command(SSD1305_SETPAGESTART + page);
    command(0x00);
    command(0x10);
    gpio_set_level((gpio_num_t)dc, 1);
      
    for(uint8_t x=0; x<128; x++) {
    	spixfer(buffer[i++]);
    }
  }
}

void Adafruit_SSD1305::spixfer(uint8_t x) {
	spi_transaction_t trans_desc;
	trans_desc.address   = 0;
	trans_desc.command   = 0;
	trans_desc.flags     = 0;
	trans_desc.length    = 8;
	trans_desc.rxlength  = 0;
	trans_desc.tx_buffer = &x;
	trans_desc.rx_buffer = NULL;

	ESP_ERROR_CHECK(spi_device_transmit(spi_handle, &trans_desc));
}
